마무리수정

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </div>
         <div class="content_set">
           <!--PROMISS-->
-          <div class="contnet1">
+          <div class="content1">
               <div class="circle recycle"></div>
               <div class="circle composition"></div>
               <div class="textbox">
